--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "5.31.0",
+    "babel-plugin-inline-react-svg": "2.0.1",
     "babel-plugin-styled-components": "2.0.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
