--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "axios": "0.27.2",
@@ -16,18 +18,30 @@
     "styled-components": "5.3.5"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^28.1.6",
     "@types/node": "18.6.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "5.31.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^28.1.3",
     "babel-plugin-inline-react-svg": "2.0.1",
     "babel-plugin-styled-components": "2.0.7",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "8.5.0",
     "husky": "8.0.1",
+    "jest": "^28.1.3",
     "prettier": "2.7.1",
-    "typescript": "4.7.4"
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   }
 }
