--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:debug": "node --inspect ./node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "axios": "0.27.2",
@@ -40,6 +41,7 @@
     "eslint-config-prettier": "8.5.0",
     "husky": "8.0.1",
     "jest": "^28.1.3",
+    "jest-localstorage-mock": "^2.4.21",
     "prettier": "2.7.1",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
